k8s/service.yml
iapiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  selector:
    app: simple-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
